# dmimo_fpga_esn

./: .gitignore  README.md  err_log.txt  instructions.txt  terminal_output.txt  test_recieve_1_18.py  test_transmit_1_18.py
demo_grc/esn_fpga/: gNB_N310.grc
demo_grc/mc_ncjt/: NCJT_MC_2Rx_X310.grc  NCJT_MC_2Tx_N32x.grc
demo_grc/mc_ncjt_he/: NCJT_MC_2Rx_X310.grc  NCJT_MC_2Tx_N32x.grc
demo_grc/mu_mimo/: P3UL_1TxUE_X310.grc  P3UL_2TxUE_X310.grc  P3UL_Burst_2TxUE_CSD_X310.grc  P3UL_Rx_2T4R_N32x.grc  (+1 more)
docs/: Demo_Instructions.md  GNURadio_Setup.md
gr-ncjt/: .gitignore  CMakeLists.txt  MANIFEST.md  MANIFEST.yml  print_file_contents.py  streamer.py
gr-ncjt/lib/srsran_ldpc/: CMakeLists.txt
gr-ncjt/lib/srsran_ldpc/include/srsran/: channel_coding_factories.h  log_likelihood_ratio.h  modulation_scheme.h
gr-ncjt/lib/srsran_ldpc/include/srsran/adt/: bit_buffer.h  bounded_bitset.h  byte_buffer.h  byte_buffer_view.h  complex.h  interval.h  ring_buffer.h  span.h  static_vector.h
gr-ncjt/lib/srsran_ldpc/include/srsran/adt/detail/: byte_buffer_range_helpers.h  byte_buffer_segment.h  byte_buffer_segment_list.h
gr-ncjt/lib/srsran_ldpc/include/srsran/ldpc/: codeblock_metadata.h  ldpc.h  ldpc_base_graph.h  ldpc_decoder.h  ldpc_encoder.h  ldpc_rate_dematcher.h  ldpc_rate_matcher.h  ldpc_segmenter_buffer.h  ldpc_segmenter_rx.h  ldpc_segmenter_tx.h
gr-ncjt/lib/srsran_ldpc/include/srsran/srsvec/: bit.h  circ_shift.h  types.h
gr-ncjt/lib/srsran_ldpc/include/srsran/support/: bit_encoding.h  cpu_features.h  error_handling.h  units.h
gr-ncjt/lib/srsran_ldpc/include/srsran/support/math/: math_utils.h
gr-ncjt/lib/srsran_ldpc/include/srsran/support/memory_pool/: fixed_size_memory_block_pool.h  linear_memory_allocator.h  memory_block_list.h
gr-ncjt/lib/srsran_ldpc/lib/: CMakeLists.txt  channel_coding_factories.cpp  crc_calculator_clmul_impl.h  crc_calculator_generic_impl.h  crc_calculator_lut_impl.h  crc_calculator_neon_impl.h  log_likelihood_ratio.cpp
gr-ncjt/lib/srsran_ldpc/lib/ldpc/: avx2_support.h  avx512_support.h  ldpc_decoder_avx2.cpp  ldpc_decoder_avx512.cpp  ldpc_decoder_generic.cpp  ldpc_decoder_impl.cpp  ldpc_decoder_impl.h  ldpc_decoder_neon.cpp  ldpc_encoder_avx2.cpp  ldpc_encoder_generic.cpp  ldpc_encoder_impl.cpp  ldpc_encoder_impl.h  ldpc_encoder_neon.cpp  ldpc_graph_impl.h  ldpc_luts_impl.cpp  ldpc_luts_impl.h  ldpc_rate_dematcher_avx2_impl.cpp  ldpc_rate_dematcher_avx512_impl.cpp  ldpc_rate_dematcher_impl.cpp  ldpc_rate_dematcher_impl.h  ldpc_rate_dematcher_neon_impl.cpp  ldpc_rate_matcher_impl.cpp  ldpc_rate_matcher_impl.h  ldpc_segmenter_helpers.h  ldpc_segmenter_rx_impl.cpp  ldpc_segmenter_rx_impl.h  ldpc_segmenter_tx_impl.cpp  ldpc_segmenter_tx_impl.h  neon_support.h  simd_support.h
gr-ncjt/lib/srsran_ldpc/lib/srsvec/: CMakeLists.txt  bit.cpp
gr-ncjt/lib/srsran_ldpc/lib/support/: CMakeLists.txt  bit_encoding.cpp  byte_buffer.cpp  math_utils.cpp
gr-ncjt/python/ncjt/bindings/: CMakeLists.txt  add_ctrldata_python.cc  add_preamble_python.cc  burst_tx_python.cc  check_ctrldata_python.cc  csi_fb_processing_python.cc  csi_quantizer_python.cc  demapper_python.cc  dual_tx_ctrl_python.cc  gnb_sync_python.cc  llr_combine_python.cc  ltf_chanest_python.cc  mapper_muxer_phase3_python.cc  mapper_muxer_python.cc  mc_stbc_decode_python.cc  mimo_detect_python.cc  mu_chanest_python.cc  noair_python.cc  ofdm_demod_python.cc  ofdm_mod_python.cc  p1_precoding_python.cc  pdc_python.cc  pkt_detect_python.cc  pkt_err_python.cc  python_bindings.cc  qam_demapper_python.cc  remapper_muxer_python.cc  rg_demapper_python.cc  rg_mapper_python.cc  rg_modes_python.cc  rx_mrc_python.cc  rx_sync_python.cc  sic_detect_python.cc  skip_data_python.cc  soft_demapper_python.cc  srsran_ldpc_decoder_python.cc  srsran_ldpc_encoder_python.cc  stbc_decode_python.cc  stbc_encode_python.cc  stream_mapper_python.cc  (+8 more)
gr-ncjt/python/ncjt/bindings/docstrings/: add_ctrldata_pydoc_template.h  add_preamble_pydoc_template.h  burst_tx_pydoc_template.h  check_ctrldata_pydoc_template.h  csi_fb_processing_pydoc_template.h  csi_quantizer_pydoc_template.h  demapper_pydoc_template.h  dual_tx_ctrl_pydoc_template.h  gnb_sync_pydoc_template.h  llr_combine_pydoc_template.h  ltf_chanest_pydoc_template.h  mapper_muxer_phase3_pydoc_template.h  mapper_muxer_pydoc_template.h  mc_stbc_decode_pydoc_template.h  mimo_detect_pydoc_template.h  mu_chanest_pydoc_template.h  noair_pydoc_template.h  ofdm_demod_pydoc_template.h  ofdm_mod_pydoc_template.h  p1_precoding_pydoc_template.h  pdc_pydoc_template.h  pkt_detect_pydoc_template.h  pkt_err_pydoc_template.h  qam_demapper_pydoc_template.h  remapper_muxer_pydoc_template.h  rg_demapper_pydoc_template.h  rg_mapper_pydoc_template.h  rx_mrc_pydoc_template.h  rx_sync_pydoc_template.h  sic_detect_pydoc_template.h  skip_data_pydoc_template.h  soft_demapper_pydoc_template.h  srsran_ldpc_decoder_pydoc_template.h  srsran_ldpc_encoder_pydoc_template.h  stbc_decode_pydoc_template.h  stbc_encode_pydoc_template.h  stream_mapper_pydoc_template.h  sync_all_pydoc_template.h  tx_framing_pydoc_template.h  tx_frm_ctrl_pydoc_template.h  (+5 more)
gr-ncjt/sandbox/fec_sandbox/: CMakeLists.txt  crc_test.py  main.cpp  test.py
matlab/: .gitignore  beacon2x2.mat  beacon2x2he.mat  beacon4x4.mat  beacon4x4he.mat  cal_ltf_precoded_time_domain.m  heltf.mat  heltfx.mat  lltfx2.mat  lltfx4.mat  mu_mimo_ul_sigen.m  mu_mimo_ul_sigen_2t2s.m  mu_mimo_ul_sigen_4t2s.m  mu_mimo_ul_sigen_csd.m  mu_mimo_ul_sigen_he.m  mu_mimo_ul_sigen_he_2t2s.m  mu_mimo_ul_sigen_nr_2t2s.m  ncjt_mc_sigen.m  ncjt_mc_sigen_all.m  ncjt_mc_sigen_he.m  ncjt_mc_sigen_he_all.m  ncjt_sc_sigen.m  ncjt_sc_sigen_all.m  ncjt_sc_sigen_he.m  ncjt_sc_sigen_he_all.m  ncjt_sc_sigen_nr_all.m  su_mimo_sigen.m  su_mimo_sigen_2t2s.m  su_mimo_sigen_2t2s_csi.m  su_mimo_sigen_4t2s.m  su_mimo_sigen_4t4s.m  su_mimo_sigen_csd.m  su_mimo_sigen_csi.m  su_mimo_sigen_he.m  su_mimo_sigen_he_2t2s.m  su_mimo_sigen_he_4t2s.m  su_mimo_sigen_he_csd.m  su_mimo_sigen_nr_2t2s.m  su_mimo_sigen_nr_4t2s.m  wifi_sigen_ldpc_2tx.m  (+5 more)
usrp/: CMakeLists.txt  usrp_n321_reset.cc  usrp_n321_setup.cc
(+469 files in other folders)
